k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: state-machine
  namespace: state-machine
  labels:
    app: state-machine
spec:
  type: ClusterIP
  selector:
    app: state-machine
  ports:
    - port: 80
      targetPort: 3051
      protocol: TCP
      name: http
