k8s/traefik-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-lb
  namespace: kube-system
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
